fix the problem of overlap between header and content

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -59,6 +59,7 @@
         z-index: 2;
         right: 2%;
         top: 10.5%;
+        z-index: -1;
     }
 
 }
